--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./https://github.com/0510swe/fdpproject-/tree/main" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG20250115171850.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>SWEDHA R</h1>
             <p>ASSISTANT PROFESSOR </p>
         </div>
