--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #B57281;
+            background-color: #B54281;
         }
 
         header {
-            background-color: #FC8EAC;
+            background-color: #FC9EAC;
             color: #fff;
             text-align: center;
             padding: 2rem 0;
@@ -34,7 +34,7 @@
         }
 
         nav {
-            background-color: #333;
+            background-color: #313;
             color: #fff;
             text-align: center;
         }
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm  <b>Swedha R </b> an assistant professor with two years of experience in higher education. I specialize in advanced Python, data science, computer networks, data mining, and data analytics. My passion lies in equipping students with the skills and knowledge necessary to excel in the rapidly evolving tech landscape. I strive to create an engaging learning environment that fosters critical thinking and practical application of concepts.</p>
+            <p>I'm  <b>Sukitha K</b> an assistant professor with two years of experience in higher education. I specialize in advanced Python, data science, computer networks, data mining, and data analytics. My passion lies in equipping students with the skills and knowledge necessary to excel in the rapidly evolving tech landscape. I strive to create an engaging learning environment that fosters critical thinking and practical application of concepts.</p>
         </div>
     </section>
 
@@ -123,6 +123,7 @@
         <div class="section-content">
             <h2>Qualification</h2>
             <p>MSC Computer Science </p>
+            <p>B.Ed. in computer science</p>
             
             
         </div>
@@ -170,7 +171,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 SWEDHA R</p>
+        <p>&copy; 2025 SUKITHA K</p>
     </footer>
 
     <script>
