--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="IMG20250115171850.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>SWEDHA R</h1>
+            <h1>SUKITHA K</h1>
             <p>ASSISTANT PROFESSOR </p>
         </div>
     </header>
